# AudioFormat

./: .gitignore  .travis.yml  README.md  _duration_8hpp.html  _duration_8hpp_source.html  _time_8hpp.html  _time_8hpp_source.html  annotated.html  audio_build.html  channel_8hpp.html  channel_8hpp_source.html  classaudio_1_1double__t-members.html  classaudio_1_1double__t.html  classaudio_1_1float__t-members.html  classaudio_1_1float__t.html  classaudio_1_1int16__16__t-members.html  classaudio_1_1int16__16__t.html  classaudio_1_1int16__32__t-members.html  classaudio_1_1int16__32__t.html  classaudio_1_1int24__24__t-members.html  classaudio_1_1int24__24__t.html  classaudio_1_1int24__32__t-members.html  classaudio_1_1int24__32__t.html  classaudio_1_1int32__32__t-members.html  classaudio_1_1int32__32__t.html  classaudio_1_1int32__64__t-members.html  classaudio_1_1int32__64__t.html  classaudio_1_1int64__64__t-members.html  classaudio_1_1int64__64__t.html  classaudio_1_1int8__16__t-members.html  classaudio_1_1int8__16__t.html  classaudio_1_1int8__8__t-members.html  classaudio_1_1int8__8__t.html  classes.html  dir_456cdebe5fccacd3d92f1f256b6c5043.html  dir_644e041c3a6521da7b27eba0e4eb2b95.html  dir_8776d92a3e60f02dcceb57d2d5eb8e00.html  dir_d89f1fef683e836e4df74782fd977ee8.html  double__t_8hpp.html  double__t_8hpp_source.html  (+39 more)
audio/: Duration.cpp  Duration.h  Duration.hpp  Time.cpp  Time.h  Time.hpp  channel.cpp  channel.h  channel.hpp  debug.cpp  debug.h  debug.hpp  debugRemove.h  double_t.cpp  double_t.h  double_t.hpp  float_t.cpp  float_t.h  float_t.hpp  format.cpp  format.h  format.hpp  int16_16_t.cpp  int16_16_t.h  int16_16_t.hpp  int16_32_t.cpp  int16_32_t.h  int16_32_t.hpp  int24_24_t.cpp  int24_24_t.h  int24_24_t.hpp  int24_32_t.cpp  int24_32_t.h  int24_32_t.hpp  int32_32_t.cpp  int32_32_t.h  int32_32_t.hpp  int32_64_t.cpp  int32_64_t.h  int32_64_t.hpp  (+12 more)
catkin/: CMakeLists.txt  package.xml
doc/: build.md  mainpage.md
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_5.js  all_8.js  classes_3.js  classes_4.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_4.js  files_6.js  files_c.js  pages_0.js  pages_1.js  searchdata.js
test/: base.cpp  debug.cpp  main.cpp  test_double.cpp  test_float.cpp  test_int16_16.cpp  test_int16_32.cpp  test_int24_24.cpp  test_int24_32.cpp  test_int32_32.cpp  test_int32_64.cpp  test_int64_64.cpp  test_int8_16.cpp  test_int8_8.cpp
