<?xml version="1.0"?>
<package>
  <name>audio</name>
  <version>0.9.0</version>
  <description>Ewol audio basic types</description>
  <maintainer email="yui.heero@gmail.com">Edouard DUPIN</maintainer>
  <license>Apache-2.0</license>
  <build_depend>etk</build_depend>
  <build_depend>audio_msg</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>etk</run_depend>
  <run_depend>audio_msg</run_depend>
</package>
